--- a/MyRecreativa/app/src/main/res/values/strings.xml
+++ b/MyRecreativa/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="favoritos">Juego Favoritos</string>
-    <string name="allGame">Juegos desbloqueados</string>
+    <string name="allGame">Juegos Todos</string>
 </resources>
